; ModuleID = '/home/carl/AnghaBench/openssl/providers/common/ciphers/extr_cipher_common.c_cipher_generic_stream_update.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/common/ciphers/extr_cipher_common.c_cipher_generic_stream_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 (%struct.TYPE_5__*, i8*, i8*, i64)* }

@ERR_LIB_PROV = common dso_local global i32 0, align 4
@PROV_R_OUTPUT_BUFFER_TOO_SMALL = common dso_local global i32 0, align 4
@PROV_R_CIPHER_OPERATION_FAILED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cipher_generic_stream_update(i8* %0, i8* %1, i64* %2, i64 %3, i8* %4, i64 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %8, align 8
  store i8* %1, i8** %9, align 8
  store i64* %2, i64** %10, align 8
  store i64 %3, i64* %11, align 8
  store i8* %4, i8** %12, align 8
  store i64 %5, i64* %13, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = bitcast i8* %15 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %16, %struct.TYPE_5__** %14, align 8
  %17 = load i64, i64* %11, align 8
  %18 = load i64, i64* %13, align 8
  %19 = icmp ult i64 %17, %18
  br i1 %19, label %20, label %24

20:                                               ; preds = %6
  %21 = load i32, i32* @ERR_LIB_PROV, align 4
  %22 = load i32, i32* @PROV_R_OUTPUT_BUFFER_TOO_SMALL, align 4
  %23 = call i32 @ERR_raise(i32 %21, i32 %22)
  store i32 0, i32* %7, align 4
  br label %43

24:                                               ; preds = %6
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load i32 (%struct.TYPE_5__*, i8*, i8*, i64)*, i32 (%struct.TYPE_5__*, i8*, i8*, i64)** %28, align 8
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %31 = load i8*, i8** %9, align 8
  %32 = load i8*, i8** %12, align 8
  %33 = load i64, i64* %13, align 8
  %34 = call i32 %29(%struct.TYPE_5__* %30, i8* %31, i8* %32, i64 %33)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %40, label %36

36:                                               ; preds = %24
  %37 = load i32, i32* @ERR_LIB_PROV, align 4
  %38 = load i32, i32* @PROV_R_CIPHER_OPERATION_FAILED, align 4
  %39 = call i32 @ERR_raise(i32 %37, i32 %38)
  store i32 0, i32* %7, align 4
  br label %43

40:                                               ; preds = %24
  %41 = load i64, i64* %13, align 8
  %42 = load i64*, i64** %10, align 8
  store i64 %41, i64* %42, align 8
  store i32 1, i32* %7, align 4
  br label %43

43:                                               ; preds = %40, %36, %20
  %44 = load i32, i32* %7, align 4
  ret i32 %44
}

declare dso_local i32 @ERR_raise(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
